--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -11,26 +11,52 @@
     justify-content: center;
    
     margin: 0 auto;
+
     
-    &--banner{
-        width: 100%;
-        max-width: 1500px;
-        
-        margin: 0 auto;
-        
+    
+    
 
-        &__img{
+        .about--background {
             width: 100%;
-            object-fit: cover;
-            height: auto;
-            object-position: center;
-            margin-top: 70px;
+            margin: 0 auto;
+            position: relative;
 
-            // @media(max-width:1024px) {
-            //       margin-top: 100px; 
-            //     }
+            @media (max-width:1200px) {
+                    padding-top: 20px;
+                }
+            
+                @media (max-width:1024px) {
+                    padding-top: 40px;
+                }
+            
+                @media (max-width:992px) {
+                    padding-top: 60px;
+                }
+    
+            >img {
+                width: 100%;
+                height: auto;
+                object-fit: cover;
+                object-position: center center;
+            }
+    
+            h1 {
+                position: absolute;
+                font-size: 50px;
+                top: 50%;
+                left: 50px;
+                color: white;
+                letter-spacing: 5px;
+    
+                @media (max-width:1200px) {
+                    font-size: 40px;
+                }
+    
+                @media (max-width:992px) {
+                    font-size: 30px;
+                }
+            }
         }
-    }
 
     .aboutWrapper{
         // width: 100%; 
