--- a/src/styles/testimonial.scss
+++ b/src/styles/testimonial.scss
@@ -14,10 +14,12 @@
         img{
             
             justify-self: center;
-            width: 50px;
-            height: 50px;
-            object-fit: cover;
+           
+            width: 100px;
+            height: 100px;
+            object-fit: contain;
             border-radius: 50%;
+           
         }
 
         p{
