--- a/src/styles/BusinessSections.scss
+++ b/src/styles/BusinessSections.scss
@@ -5,7 +5,9 @@
 }
 
 .businessSections{
-    
+    display: flex;
+    flex-direction: column;
+
     
         img{
             object-fit: cover;
